2004-06-25  JP Rosevear  <jpr@novell.com>

	* gui/dialogs/alarm-dialog.glade: don't show option tabs

2004-06-25  JP Rosevear  <jpr@novell.com>

	* gui/dialogs/task-editor.c (task_editor_construct): use "Task"
	instead of "Basic"

	* gui/dialogs/event-editor.c (event_editor_construct): use
	"Invitations" instead of "Meeting"

2004-06-25  JP Rosevear  <jpr@novell.com>

	* gui/dialogs/e-delegate-dialog.glade: use "Contacts..."

	* gui/dialogs/alarm-dialog.glade: add custom message email toggle

	* gui/dialogs/alarm-dialog.c (get_widgets): get custom email
	message toggle
	(check_custom_email): check the custom message when setting
	sensitivity of OK button
	(malarm_message_toggled_cb): check custom email
	(malarm_description_changed_cb): ditto
	(action_selection_done_cb): ditto

2004-06-25  JP Rosevear  <jpr@novell.com>

	* gui/dialogs/alarm-dialog.c (alarm_to_dialog): set the default
	address here if possible
	(dialog_to_alarm): don't set it here
	(check_custom_email): check for To: entries
	(malarm_addresses_changed_cb): update when the text in the to
	entry changes
	(action_selection_done_cb): for the custom email settings
	(init_widgets): listen for email To: changes
	(alarm_dialog_run): only save the alarm if the response was "OK"

2004-06-25  JP Rosevear  <jpr@novell.com>

	* gui/dialogs/event-page.c (event_page_init): init alarm interval
	to -1
	(clear_widgets): give the alarm time option menu a sensible
	default
	(is_custom_alarm): account for the user defined alarm time if it
	doesn't match the default set
	(event_page_fill_widgets): default the option menu to the 15
	minute or user define alarm if no alarm is currently set
	(event_page_fill_component): account for the user defined alarm
	tme
	(init_widgets): add in the user defined alarm time if it doesn't
	match the default set

2004-06-25  JP Rosevaer  <jpr@novell.com>

	* gui/dialogs/alarm-dialog.c (palarm_widgets_to_alarm): the args
	are optional, don't store them if they aren't there