@@ -1,3 +1,10 @@
+2004-06-28  Not Zed  <NotZed@Ximian.com>
+
+	* gui/tasks-component.c (impl__get_userCreatableItems): same.
+
+	* gui/calendar-component.c (impl__get_userCreatableItems): fix up
+	shortcuts.  #56746.
+
 2004-06-25  JP Rosevear  <jpr@novell.com>
 
 	* gui/dialogs/alarm-dialog.glade: don't show option tabs
